# RAG-experiments

./: .dockerignore  .env.haystack.example  .env.lightrag.example  .env.ragflow.example  .gitignore  Dockerfile.haystack  README.md  docker-compose.haystack.yml  docker-compose.lightrag.yml  docker-compose.ragflow.yml  pyproject.toml
haystack/pipelines/: __init__.py
haystack/pipelines/documents/: __init__.py  pipeline_wrapper.py
haystack/pipelines/indexing/: pipeline_wrapper.py
haystack/pipelines/retrieve/: __init__.py  pipeline_wrapper.py
haystack/service/: __init__.py  document_store.py  embedders.py  filters.py  schemas.py  serialization.py  settings.py
